--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -10,7 +10,7 @@ spec:
   build:
     env:
     - name: BP_DOTNET_PROJECT_PATH
-      value: .
+      value: ./
     - name: BP_DOTNET_FRAMEWORK_VERSION
       value: 8.0.0
   params:
